--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -2,3 +2,5 @@ driver=com.mysql.cj.jdbc.Driver
 url=jdbc:mysql://localhost:3306/douban?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true&allowPublicKeyRetrieval=true&allowMultiQueries=true
 name=root
 password=
+initialSize=5
+maxsize=10
