--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
               </exclusion>
           </exclusions>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+      <dependency>
+          <groupId>commons-fileupload</groupId>
+          <artifactId>commons-fileupload</artifactId>
+          <version>1.3.2</version>
+      </dependency>
       <dependency>
           <groupId>org.springframework</groupId>
           <artifactId>spring-jdbc</artifactId>
@@ -168,6 +174,19 @@
           <artifactId>pagehelper</artifactId>
           <version>5.1.9</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+      <dependency>
+          <groupId>redis.clients</groupId>
+          <artifactId>jedis</artifactId>
+          <version>3.0.1</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-redis -->
+      <dependency>
+          <groupId>org.springframework.data</groupId>
+          <artifactId>spring-data-redis</artifactId>
+          <version>2.1.8.RELEASE</version>
+      </dependency>
+
   </dependencies>
 
   <build>
